// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: bitbucket 1`] = `
<div
  className="display-flex-start"
>
  <form
    className="width-50"
    onSubmit={[Function]}
  >
    <h2
      className="big"
    >
      onboarding.create_project.pat_form.title.bitbucket
    </h2>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_form.help.bitbucket
    </p>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.bitbucket"
      id="personal_access_token_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_pat"
      required={true}
    >
      <input
        autoFocus={true}
        className="input-super-large is-invalid"
        id="personal_access_token"
        minLength={1}
        onChange={[Function]}
        type="text"
        value=""
      />
    </ValidationInput>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.bitbucket"
      id="personal_access_token_submit"
      isInvalid={true}
      isValid={false}
      label={null}
    >
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </ValidationInput>
  </form>
  <Alert
    className="big-spacer-left width-50"
    display="block"
    variant="info"
  >
    <h3>
      onboarding.create_project.pat_help.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.bitbucket.instructions"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "button": <strong>
              onboarding.create_project.pat_help.bitbucket.instructions.button
            </strong>,
            "menu": <strong>
              onboarding.create_project.pat_help.bitbucket.instructions.menu
            </strong>,
          }
        }
      />
    </p>
    <div
      className="text-middle"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/bitbucket.svg"
      />
      <a
        href="http://www.example.com/account"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.link
      </a>
    </div>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions2.bitbucket
    </p>
    <ul>
      <li>
        <FormattedMessage
          defaultMessage="onboarding.create_project.pat_help.bbs_permission_projects"
          id="onboarding.create_project.pat_help.bbs_permission_projects"
          values={
            Object {
              "perm": <strong>
                onboarding.create_project.pat_help.read_permission
              </strong>,
            }
          }
        />
      </li>
      <li>
        <FormattedMessage
          defaultMessage="onboarding.create_project.pat_help.bbs_permission_repos"
          id="onboarding.create_project.pat_help.bbs_permission_repos"
          values={
            Object {
              "perm": <strong>
                onboarding.create_project.pat_help.read_permission
              </strong>,
            }
          }
        />
      </li>
    </ul>
  </Alert>
</div>
`;

exports[`should render correctly: bitbucket cloud 1`] = `
<div
  className="display-flex-start"
>
  <form
    className="width-50"
    onSubmit={[Function]}
  >
    <h2
      className="big"
    >
      onboarding.create_project.pat_form.title.bitbucketcloud
    </h2>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_form.help.bitbucketcloud
    </p>
    <ValidationInput
      id="enter_username_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_username"
      required={true}
    >
      <input
        autoFocus={true}
        className="input-super-large is-invalid"
        id="username"
        minLength={1}
        name="username"
        onChange={[Function]}
        type="text"
      />
    </ValidationInput>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.bitbucketcloud"
      id="personal_access_token_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_pat.bitbucketcloud"
      required={true}
    >
      <input
        autoFocus={false}
        className="input-super-large is-invalid"
        id="personal_access_token"
        minLength={1}
        onChange={[Function]}
        type="text"
        value=""
      />
    </ValidationInput>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.bitbucketcloud"
      id="personal_access_token_submit"
      isInvalid={true}
      isValid={false}
      label={null}
    >
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </ValidationInput>
  </form>
  <Alert
    className="big-spacer-left width-50"
    display="block"
    variant="info"
  >
    <h3>
      onboarding.create_project.pat_help.instructions_username.bitbucketcloud.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions_username.bitbucketcloud
    </p>
    <div
      className="text-middle big-spacer-bottom"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/bitbucket.svg"
      />
      <a
        href="https://bitbucket.org/account/settings/"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.instructions_username.bitbucketcloud.link
      </a>
    </div>
    <h3>
      onboarding.create_project.pat_help.bitbucketcloud.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.bitbucketcloud.instructions"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "alm": "onboarding.alm.bitbucketcloud",
          }
        }
      />
    </p>
    <div
      className="text-middle"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/bitbucket.svg"
      />
      <a
        href="https://bitbucket.org/account/settings/app-passwords/new"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.bitbucketcloud.link
      </a>
    </div>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions2.bitbucketcloud
    </p>
    <ul>
      <li>
        <FormattedMessage
          defaultMessage="onboarding.create_project.pat_help.bbs_permission_repos"
          id="onboarding.create_project.pat_help.bbs_permission_repos"
          values={
            Object {
              "perm": <strong>
                onboarding.create_project.pat_help.read_permission
              </strong>,
            }
          }
        />
      </li>
    </ul>
  </Alert>
</div>
`;

exports[`should render correctly: gitlab 1`] = `
<div
  className="display-flex-start"
>
  <form
    className="width-50"
    onSubmit={[Function]}
  >
    <h2
      className="big"
    >
      onboarding.create_project.pat_form.title.gitlab
    </h2>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_form.help.gitlab
    </p>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.gitlab"
      id="personal_access_token_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_pat"
      required={true}
    >
      <input
        autoFocus={true}
        className="input-super-large is-invalid"
        id="personal_access_token"
        minLength={1}
        onChange={[Function]}
        type="text"
        value=""
      />
    </ValidationInput>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.gitlab"
      id="personal_access_token_submit"
      isInvalid={true}
      isValid={false}
      label={null}
    >
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </ValidationInput>
  </form>
  <Alert
    className="big-spacer-left width-50"
    display="block"
    variant="info"
  >
    <h3>
      onboarding.create_project.pat_help.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.instructions"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "alm": "onboarding.alm.gitlab",
          }
        }
      />
    </p>
    <div
      className="text-middle"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/gitlab.svg"
      />
      <a
        href="https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.link
      </a>
    </div>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions2.gitlab
    </p>
    <ul>
      <li
        className="spacer-bottom"
      >
        <strong>
          onboarding.create_project.pat_help.gitlab.read_api_permission
        </strong>
      </li>
    </ul>
  </Alert>
</div>
`;

exports[`should render correctly: gitlab with non-standard api path 1`] = `
<div
  className="display-flex-start"
>
  <form
    className="width-50"
    onSubmit={[Function]}
  >
    <h2
      className="big"
    >
      onboarding.create_project.pat_form.title.gitlab
    </h2>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_form.help.gitlab
    </p>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.gitlab"
      id="personal_access_token_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_pat"
      required={true}
    >
      <input
        autoFocus={true}
        className="input-super-large is-invalid"
        id="personal_access_token"
        minLength={1}
        onChange={[Function]}
        type="text"
        value=""
      />
    </ValidationInput>
    <ValidationInput
      error="onboarding.create_project.pat_incorrect.gitlab"
      id="personal_access_token_submit"
      isInvalid={true}
      isValid={false}
      label={null}
    >
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </ValidationInput>
  </form>
  <Alert
    className="big-spacer-left width-50"
    display="block"
    variant="info"
  >
    <h3>
      onboarding.create_project.pat_help.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.instructions"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "alm": "onboarding.alm.gitlab",
          }
        }
      />
    </p>
    <div
      className="text-middle"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/gitlab.svg"
      />
      <a
        href="https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.link
      </a>
    </div>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions2.gitlab
    </p>
    <ul>
      <li
        className="spacer-bottom"
      >
        <strong>
          onboarding.create_project.pat_help.gitlab.read_api_permission
        </strong>
      </li>
    </ul>
  </Alert>
</div>
`;

exports[`should render correctly: no token needed 1`] = `
<DeferredSpinner
  className="spacer-left"
  loading={true}
/>
`;

exports[`should show error when issue: issue submitting token 1`] = `
<div
  className="display-flex-start"
>
  <form
    className="width-50"
    onSubmit={[Function]}
  >
    <h2
      className="big"
    >
      onboarding.create_project.pat_form.title.bitbucketcloud
    </h2>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_form.help.bitbucketcloud
    </p>
    <ValidationInput
      id="enter_username_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_username"
      required={true}
    >
      <input
        autoFocus={true}
        className="input-super-large is-invalid"
        id="username"
        minLength={1}
        name="username"
        onChange={[Function]}
        type="text"
        value="username"
      />
    </ValidationInput>
    <ValidationInput
      error="default_error_message"
      id="personal_access_token_validation"
      isInvalid={false}
      isValid={false}
      label="onboarding.create_project.enter_pat.bitbucketcloud"
      required={true}
    >
      <input
        autoFocus={false}
        className="input-super-large is-invalid"
        id="personal_access_token"
        minLength={1}
        onChange={[Function]}
        type="text"
        value="token"
      />
    </ValidationInput>
    <ValidationInput
      error="default_error_message"
      id="personal_access_token_submit"
      isInvalid={true}
      isValid={false}
      label={null}
    >
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </ValidationInput>
  </form>
  <Alert
    className="big-spacer-left width-50"
    display="block"
    variant="info"
  >
    <h3>
      onboarding.create_project.pat_help.instructions_username.bitbucketcloud.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions_username.bitbucketcloud
    </p>
    <div
      className="text-middle big-spacer-bottom"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/bitbucket.svg"
      />
      <a
        href="https://bitbucket.org/account/settings/"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.instructions_username.bitbucketcloud.link
      </a>
    </div>
    <h3>
      onboarding.create_project.pat_help.bitbucketcloud.title
    </h3>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.bitbucketcloud.instructions"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "alm": "onboarding.alm.bitbucketcloud",
          }
        }
      />
    </p>
    <div
      className="text-middle"
    >
      <img
        alt=""
        className="spacer-right"
        height="16"
        src="/images/alm/bitbucket.svg"
      />
      <a
        href="https://bitbucket.org/account/settings/app-passwords/new"
        rel="noopener noreferrer"
        target="_blank"
      >
        onboarding.create_project.pat_help.bitbucketcloud.link
      </a>
    </div>
    <p
      className="big-spacer-top big-spacer-bottom"
    >
      onboarding.create_project.pat_help.instructions2.bitbucketcloud
    </p>
    <ul>
      <li>
        <FormattedMessage
          defaultMessage="onboarding.create_project.pat_help.bbs_permission_repos"
          id="onboarding.create_project.pat_help.bbs_permission_repos"
          values={
            Object {
              "perm": <strong>
                onboarding.create_project.pat_help.read_permission
              </strong>,
            }
          }
        />
      </li>
    </ul>
  </Alert>
</div>
`;
